# pvr

./: .gitignore  CMakeLists.txt  LICENCE  README  index.html  params.json  pvrbook.bat
cmake/Modules/: FindFIELD3D.cmake  FindImath.cmake  FindOpenImageIO.cmake
examples/simple_voxel_buffer/: .gitignore  SConstruct  main.cpp
houdini/otls/: pvr_WriteCamera.otl  pvr_WriteLight.otl
libpvr/: .gitignore  BuildSupport.py  Doxyfile  SConscript  SConstruct
libpvr/doc/: footer.html  pvr.css
libpvr/examples/attr_visitor/: .gitignore  SConstruct
libpvr/examples/cam_back_front/: SConstruct  cam_back_front
libpvr/examples/field3d_stats/: SConstruct  field3d_stats
libpvr/examples/filter_stats/: .gitignore  SConstruct
libpvr/examples/noise_range/: SConstruct
libpvr/examples/point_splat/: .gitignore  SConstruct  point_splat
libpvr/export/: Acceleration.h  AttrTable.h  AttrUtil.h  Camera.h  ClassFactory.h  Constants.h  CubicInterp.h  Curve.h  DeepImage.h  Derivatives.h  Exception.h  Filter.h  FrustumMapping.h  GaussianInterp.h  Geometry.h  Globals.h  Image.h  Interpolation.h  Interrupt.h  LinearInterp.h  Log.h  Math.h  Meshes.h  MitchellInterp.h  Modeler.h  ModelerInput.h  ModelingUtils.h  ParamBase.h  ParamMap.h  Particles.h  PhaseFunction.h  PluginLoader.h  Polygons.h  RenderGlobals.h  RenderState.h  Renderer.h  Scene.h  StlUtil.h  Strings.h  Time.h  (+6 more)
libpvr/export/Lights/: Light.h  PointLight.h  SpotLight.h
libpvr/export/Noise/: Noise.h  NoiseImpl.h  Perlin.h
libpvr/export/Occluders/: Occluder.h  OtfTransmittanceMapOccluder.h  OtfVoxelOccluder.h  RaymarchOccluder.h  TransmittanceMapOccluder.h  VoxelOccluder.h
libpvr/export/Primitives/: InstantiationPrim.h  Primitive.h  RasterizationPrim.h
libpvr/export/RaymarchSamplers/: DensitySampler.h  PhysicalSampler.h  RaymarchSampler.h  ScatteringSampler.h
libpvr/export/Raymarchers/: AdaptiveRaymarcher.h  NaiveRaymarcher.h  Raymarcher.h  UniformRaymarcher.h
libpvr/export/Volumes/: CompositeVolume.h  ConstantVolume.h  FractalCloud.h  Volume.h  VoxelVolume.h
libpvr/python/: CMakeLists.txt  Common.cpp  Common.h  PyAttrTable.cpp  PyCamera.cpp  PyClassPool.cpp  PyDeepImage.cpp  PyField3D.cpp  PyGeometry.cpp  PyGlobals.cpp  PyImage.cpp  PyLights.cpp  PyLog.cpp  PyMath.cpp  PyModeler.cpp  PyNoise.cpp  PyOccluders.cpp  PyParticles.cpp  PyPhaseFunction.cpp  PyPolygons.cpp  PyPrimitive.cpp  PyPvr.cpp  PyRaymarchSamplers.cpp  PyRaymarchers.cpp  PyRenderer.cpp  PyTransmittanceMap.cpp  PyTypes.cpp  PyVolumes.cpp
libpvr/python/pvr/: __init__.py  cameras.py  defaults.py  lights.py  pvrutil.py  renderers.py
libpvr/src/: AttrTable.cpp  AttrUtil.cpp  Camera.cpp  ClassFactory.cpp  DeepImage.cpp  FrustumMapping.cpp  Geometry.cpp  Globals.cpp  Image.cpp  Interrupt.cpp  Light.cpp  Log.cpp  Math.cpp  Meshes.cpp  Modeler.cpp  ModelerInput.cpp  Particles.cpp  PhaseFunction.cpp  Polygons.cpp  RenderGlobals.cpp  Renderer.cpp  Strings.cpp  TransmittanceMap.cpp  VolumeAttr.cpp
libpvr/src/Lights/: Light.cpp  PointLight.cpp  SpotLight.cpp
libpvr/src/Noise/: Noise.cpp  Perlin.cpp
libpvr/src/Occluders/: OtfTransmittanceMapOccluder.cpp  OtfVoxelOccluder.cpp  RaymarchOccluder.cpp  TransmittanceMapOccluder.cpp  VoxelOccluder.cpp
libpvr/src/Primitives/: RasterizationPrim.cpp
libpvr/src/RaymarchSamplers/: DensitySampler.cpp  PhysicalSampler.cpp  ScatteringSampler.cpp
libpvr/src/Raymarchers/: AdaptiveRaymarcher.cpp  NaiveRaymarcher.cpp  Raymarcher.cpp  UniformRaymarcher.cpp
libpvr/src/Volumes/: .#VoxelVolume.cpp  CompositeVolume.cpp  ConstantVolume.cpp  FractalCloud.cpp  Volume.cpp  VoxelVolume.cpp
libpvr/src/disabled/: SpherePrimitive.cpp
scenes/: .gitignore  compare_images.py  regression_tests.py  update_reference_image.py
scenes/book/chapter_1/: fig_1_1.py
scenes/book/chapter_10/: fig_10_19.py
scenes/book/chapter_12/: fig_12_2.py
scenes/book/chapter_14/: fig_14_1.py  fig_14_10.py  fig_14_11.py  fig_14_2.py  fig_14_4.py  fig_14_5.py  figs_14_7_8_9.py
scenes/book/chapter_3/: interp.py  interp_hi.py
scenes/book/chapter_7/: fig_7_2.py  fig_7_4.py  fig_7_5.py  fig_7_6.py  fig_7_7.py  fig_7_8.py
scenes/book/chapter_8/: fig_8_1.py  fig_8_2.py  fig_8_3.py
scenes/book/chapter_9/: fig_9_11.py  fig_9_13.py  fig_9_14.py
scenes/instancing/line/: houdini_setup.hipnc  render.py
scenes/instancing/sphere/: houdini_setup.hipnc  render.py  sphere.bgeo
scenes/instancing/surface/: render.py
scenes/lights/point_light/: render.py
scenes/precomp_occl/otf_tmap/: render.py
scenes/precomp_occl/otf_voxel/: render.py
scenes/precomp_occl/tmap/: render.py
scenes/precomp_occl/voxel/: render.py
scenes/rasterization/curved_line/: render.py
scenes/rasterization/curved_pyroclastic_line/: render.py
scenes/rasterization/line/: houdini_setup.hipnc  line.bgeo  render.py
scenes/rasterization/point/: houdini_setup.hipnc  point.bgeo  render.py
scenes/rasterization/pyroclastic_line/: houdini_setup.hipnc  line.bgeo  render.py
scenes/rasterization/pyroclastic_point/: houdini_setup.hipnc  point.bgeo  render.py
scenes/rasterization/pyroclastic_point_single/: render.py
scenes/rendering/constant_volume/: render.py
scenes/rendering/holdout/: reference.exr  render.py
scenes/rendering/holdout_inverse/: reference.exr  render.py
scenes/rendering/holdout_together/: reference.exr  render.py
vs2010/: pvrbook.sln
vs2010/attr_visitor/: attr_visitor.vcxproj  attr_visitor.vcxproj.filters
vs2010/cam_back_front/: cam_back_front.vcxproj  cam_back_front.vcxproj.filters
vs2010/fied3d_stats/: fied3d_stats.vcxproj  fied3d_stats.vcxproj.filters
vs2010/filter_stats/: filter_stats.vcxproj  filter_stats.vcxproj.filters
vs2010/gpd/: gpd.vcxproj  gpd.vcxproj.filters
vs2010/libpvr/: libpvr.vcxproj  libpvr.vcxproj.filters
vs2010/noise_range/: noise_range.vcxproj  noise_range.vcxproj.filters
vs2010/point_splat/: point_splat.vcxproj  point_splat.vcxproj.filters
vs2010/pvr/: pvr.bat
vs2010/pypvr/: pypvr.vcxproj  pypvr.vcxproj.filters
vs2010/simple_voxel_buffer/: simple_voxel_buffer.vcxproj  simple_voxel_buffer.vcxproj.filters
(+41 files in other folders)
